ingress/nginx-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-controller
spec:
  controller: nginx.org/ingress-controller
